--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>My name is N.pro</h1>
-        <h1>This my Github</h1>
+        <h1>This my Github lab</h1>
+        <h1>Mahanakorn</h1>
     </body>
 </html>
